--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "finalapp",
   "version": "0.1.0",
+  "proxy": "https://back-events-n.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
